# aioconsole

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .travis-osx-install  .travis.yml  README.md  README.rst  pyproject.toml  responses.py  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: ci.yml
aioconsole/: __init__.py  __main__.py  apython.py  code.py  command.py  compat.py  console.py  events.py  execute.py  rlwrap.py  server.py  stream.py
apython/: __init__.py  cli.py  code.py  command.py  compat.py  events.py  execute.py  input.py  main.py  server.py  stream.py
doc/: aioconsole.rst
docs/: conf.py  index.rst  requirements.txt
example/: __init__.py  cli.py  dice.py  echo.py
tests/: conftest.py  test_apython.py  test_command.py  test_execute.py  test_interact.py  test_server.py  test_stream.py
